# advent_of_code

2021/: pyproject.toml
2021/day_01/: day_01.py  test_day_01.py
2021/day_02/: day_02.py  submarine.py  test_day_02.py
2021/day_03/: day_03.py  submarine.py  test_day_03.py
2021/day_04/: day_04.py  test_day_04.py
