[tool.poetry]
name = "2021"
version = "0.1.0"
description = ""
authors = ["Nikos Kallergis <nikos.kallergis@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.12.0"
rich = "^10.15.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
